# fileresolver

./: CMakeLists.txt  README.md  demo.cpp  main.cpp  tests.cpp
include/: fileresolver.hpp  filesystem.hpp
